# zmp

ZMMP_7100_PL2015_2/: Makefile  petalinux_qemu.sh
ZMMP_7100_PL2015_2/components/apps/force_usb_power/: Makefile
ZMMP_7100_PL2015_2/components/apps/hello_world/: Kconfig  Makefile  README  hello_world.cpp
ZMMP_7100_PL2015_2/components/bootloader/zynq_fsbl/: ps7_init.c
ZMMP_7100_PL2015_2/hardware/embedded_design/: embedded_design.xpr
ZMMP_7100_PL2015_2/hardware/embedded_design/embedded_design.cache/wt/: java_command_handlers.wdf  project.wpc  synthesis.wdf  webtalk_pa.xml
ZMMP_7100_PL2015_2/hardware/embedded_design/embedded_design.runs/.jobs/: vrs_config_2.xml  (+1 more)
ZMMP_7100_PL2015_2/hardware/embedded_design/embedded_design.sdk/: zynq_design_1_wrapper.hdf
ZMMP_7100_PL2015_2/subsystems/linux/: config  config.old
ZMMP_7100_PL2015_2/subsystems/linux/hw-description/: ps7_init.tcl  ps7_init_gpl.h  zynq_design_1_bd.tcl
ZMMP_7100_PL2015_2/work/Socket-master/: address.h  common_socket.h  datagram.h  socket.h  socket_exception.h  tcp.h  udp.h
ZMMP_7100_PL2015_2/work/Socket-master/examples/: tcp_recv  udp_recv  udp_send
ZMMP_7100_PL2015_2/work/socket/: CMakeLists.txt
ZMMP_7100_PL2015_2/work/socket/examples/: tcp_receiver.cpp  tcp_sender.cpp  tcp_server.cpp  udp_receiver.cpp  udp_sender.cpp
ZMMP_7100_PL2015_2/work/socket/include/: address.h  common_socket.h  datagram.h  socket.h  socket_define.h  socket_exception.h  tcp.h  udp.h
ZMMP_7100_PL2015_2/work/socket/src/: address.cpp  common_socket.cpp  datagram.cpp  socket_exception.cpp  tcp.cpp  udp.cpp
(+419 files in other folders)
